--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 
 <section id="home">
-<h2>currently @ sharkninja r&d hair care</h2>
+<h2>currently afk... sharkninja r&d hair care</h2>
 <p>sophomore in mechanical engineering at cornell university.</p>
 </section>
 
